Commented out all the Log functions

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -51,4 +51,5 @@
         <item >9</item>
         <item >10</item>
     </string-array>
+    <string name="app_id">362282703883803</string>
 </resources>
