--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="hello">Hello World, NewBowler!</string>
     <string name="app_name">Good Bowler Stats</string>
     <string name="name">Bowler Name</string>
     <string name="average">Enter Average</string>
@@ -51,4 +50,5 @@
         <item >9</item>
         <item >10</item>
     </string-array>
+    <string name="app_id">362282703883803</string>
 </resources>
